fix dropdown behind train list

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -108,12 +108,14 @@
 .timesheet-trains {
   background: linear-gradient(var(--secondary-color) 0%, var(--primary-color) 100%);
   height: 80vh;
+  position: relative;
+  z-index: -1;
 }
 
 .timesheet-trains article.card {
   width: fit-content;
   background-color: rgba(255, 255, 255, 0.5);
-  position: unset;
+  /* position: unset; */
   color: var(--light-color);
 }
 
